feat: add product management API with CRUD operations and image upload functionality

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,7 @@ PASSWORD_ADMIN=""
 NEXTAUTH_SECRET=""
 AUTH_SECRET="" 
 AUTH_URL="http://localhost:3000"
+
+CLOUDINARY_CLOUD_NAME="tu-cloud-name"
+CLOUDINARY_API_KEY="tu-api-key"
+CLOUDINARY_API_SECRET="tu-api-secret"
