feat: update Order model with new fields and indices

--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,16 @@
-DATABASE_URL=""
+DATABASE_URL="postgresql://neondb_owner:npg_qKOYH6yxnr8d@ep-patient-base-acyimgg4-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 NODE_ENV="development"
 PASSWORD_SALT_ROUNDS="10"
-PASSWORD_ADMIN=""
+PASSWORD_ADMIN="admin123"
 
-NEXTAUTH_SECRET=""
-AUTH_SECRET="" 
+NEXTAUTH_SECRET="WgWMyzayP1ZzbHuNMEhnbDNHR1VH5T6060QR7UhIbS4="
+AUTH_SECRET="kbCAjsVtPByfRIRyCAHp88HRJr1t7Qmz/jlDRlqZLYo=" 
 AUTH_URL="http://localhost:3000"
 
-CLOUDINARY_CLOUD_NAME="tu-cloud-name"
-CLOUDINARY_API_KEY="tu-api-key"
-CLOUDINARY_API_SECRET="tu-api-secret"
+# DATABASE_URL="postgresql://neondb_owner:npg_LVc5wtM1Ypvg@ep-round-poetry-ac1iz5cg-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+
+CLOUDINARY_CLOUD_NAME="dnmp8sdlk"
+CLOUDINARY_API_KEY="136361282667994"
+CLOUDINARY_API_SECRET="nUC5IOfGzxUAQgyc_sMrYjJk8nk"
