--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,5 @@ AUTH_URL="http://localhost:3000"
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
+
+NEXT_PUBLIC_WHATSAPP_PHONE=""
