add: email send notify to admin

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,12 @@ CLOUDINARY_API_SECRET=""
 
 NEXT_PUBLIC_WHATSAPP_PHONE=""
 PERUDEVS_API_KEY=""
+
+
+
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT="587"
+EMAIL_USER=""
+EMAIL_PASS=""
+CURRENT_ADMIN_EMAIL=""
+NEXT_PUBLIC_APP_URL="http://localhost:3000" 
